# claude-bridge

./: .env.example  .gitattributes  .gitignore  GUIDE.md  LICENSE  README.md  bridge_mcp.py  broker.py  broker_client.py  config.py  dashboard.py  db.py  package-lock.json  package.json  peer-snippet.md  prompts.py  pyproject.toml  requirements.txt  responder.py  vision.py
.claude-plugin/: marketplace.json  plugin.json
attachments/: .gitkeep
scripts/: register_mcp.py
src/: answerEngine.js  answerServer.js  askServer.js  doctor.js  http.js  images.js  prompts.js  relayServer.js  transcripts.js
test/: answerServer.test.js  ask.test.js  http.test.js  images.test.js  peer.test.js  relay.test.js  transcripts.test.js
tests/: conftest.py  test_attachments.py  test_db.py  test_register_mcp.py  test_responder.py  test_roundtrip.py  test_validation.py
