[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-bridge"
version = "0.1.0"
description = "Two-way communication between separate Claude Code sessions: AI coding agents in different projects ask each other authoritative questions via a broker + MCP servers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ajaykumar Savaliya" }]
keywords = [
    "claude-code", "mcp", "model-context-protocol", "ai-agents",
    "agent-communication", "multi-repo", "llm", "fastapi",
]
# Upper bounds cap fast-moving SDK majors so a future breaking release can't
# silently break a deploy. Commit a lockfile (uv.lock / pip-compile output) for
# fully reproducible installs.
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "httpx>=0.27,<1",
    "anthropic>=0.40,<1",
    "mcp[cli]>=1.2,<2",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<2",
    "asgi-lifespan>=2.1,<3",
]

# Flat top-level modules (not a package dir), so list them explicitly.
[tool.setuptools]
py-modules = [
    "broker",
    "bridge_mcp",
    "responder",
    "vision",
    "db",
    "config",
    "broker_client",
    "prompts",
    "dashboard",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
